--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.application.name=SECURITY
 
 spring.security.user.name = user
 spring.security.user.password = root
+
+spring.datasource.url = jdbc:mysql://localhost:330/hybernate
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.data.rest.base-path=/api
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
